--- a/project/.gitignore
+++ b/project/.gitignore
@@ -18,3 +18,23 @@
 **/.vercel
 **/package-lock.json
 **/pnpm-lock.yaml
+
+**/node_modules
+**/public/build
+**/public/hot
+**/public/storage
+**/storage/*.key
+**/vendor
+**/.env
+**/.env.backup
+**/.env.production
+**/.phpunit.result.cache
+**/Homestead.json
+**/Homestead.yaml
+**/auth.json
+**/npm-debug.log
+**/yarn-error.log
+**/.fleet
+**/.idea
+**/.vscode
+**/db.sqlite
