--- a/project/.prettierrc
+++ b/project/.prettierrc
@@ -1,9 +1,8 @@
 {
   "tabWidth": 2,
   "useTabs": false,
-  "printWidth": 120,
-  "singleQuote": false,
+  "printWidth": 100,
+  "singleQuote": true,
   "trailingComma": "es5",
-  "jsxSingleQuote": false,
   "bracketSameLine": false
 }
